# pydginx

./: .editorconfig  .gitignore  README.md  dev.requirements.in  justfile  pyproject.toml
docs/: modules.md
examples/: runner.py
src/pydginx/: bases.py  utils.py
src/pydginx/conf/: contexts.py  directives.py  exceptions.py  literals.py
src/pydginx/conf/modules/: core.py
src/pydginx/conf/modules/http/: core.py  log.py
tests/: testlib.py
tests/bases/: test_non_instantiable.py  test_renderable.py  test_representable.py  test_singleton.py
tests/conf/contexts/: test_context.py  test_main_context.py
tests/conf/directives/: test_block.py  test_dataclass_directive.py  test_directive.py  test_is_directive.py  test_render_value.py  test_single_value_dataclass_directive.py
tests/conf/literals/: test_literal_enum.py
tests/conf/modules.py/: test_core.py
tests/utils/: test_instantiate.py  test_read_only_proxy.py  test_to_snake_case.py
